# TurtleSim

./: .gitignore  CMakeLists.txt  CMakePresets.json  SimStudio.js  SimStudio.wasm  buid.bat  build.bat  build.py  build_full.bat  build_wasm.py  example.xml  main.cpp  main_1.cpp  package.json  run.bat  run_directx.cpp  run_directx.h  run_sdl.cpp  run_sdl.h  wasmbuild.bat
BevySim/: Cargo.toml
BevySim/src/: main.rs
GtkTest/: CMakeLists.txt  macinstall.bat  main.cpp
GtkTest/src/Log/: Logger.cpp  Logger.h
GtkTest/src/UI/: SimEntitiesLibrary.hpp  TurtleAppUi.cpp  TurtleAppUi.h
MacTest/: .gitignore  CMakeLists.txt  mac_install.txt  macmain  macmain.cpp  main.cpp
MacTest/TurtleApp/: TurtleApp.cpp  TurtleApp.h
MacTest/TurtleSim/: Prelude.h
MacTest/TurtleSim/Entities/: SimEntity.cpp  SimEntity.h
MacTest/TurtleSim/World/: SimWorld.cpp  SimWorld.h
MacTest/TurtleSimUI/: SimUI.cpp  SimUI.h
MacTest/TurtleUI/Theme/: Theme.cpp  Theme.h
SimStudio/: CMakeLists.txt
SimStudio/SimAlgorythms/: Scheduling.h
SimStudio/SimCore/: CMakeLists.txt  Prelude.h
TurtleSimCpp/: CMakeLists.txt  DeveloperLog.docx  Results.docx  imgui.ini  init_dlls.bat  install.bat  main.cpp  run_sdl.cpp  wasmbuild.bat
TurtleSimCpp/SimStudio/SimBlueprints/: NodeParent.h  Prelude.h
TurtleSimCpp/SimStudio/SimCore/: AnyEventEmmiter.h
TurtleSimCpp/json_examples/: example_1_paralel.json
TurtleSimCpp/plant_simulation/: example.spp  example.spp.bak
TurtleSimCpp/src/app/: anynumber.h  buffer.cpp  drain.cpp  entity.h  lane_single.h  loader.cpp  mu.h  track.cpp  track.h  unloader.cpp  warehouse.cpp  world.h
TurtleSimCpp/src/app/statistics/: buffer_statistics.cpp  drain_statistics.h  lane_statistics.h  source_statistics.h  unloader_statistics.h  warehouse_statistics.h
TurtleSimCpp/src/blueprints/: blueprints_prelude.h  bpnode_parent.h
TurtleSimCpp/src/math/: vec4.cpp  vec4.h
TurtleSimCpp/src/runs/: run_xml.h  wasm_test.h
TurtleSimCpp/src/serialization/: safejson.cpp
TurtleSimCpp/src/statistics/: report_maker.cpp
TurtleSimCpp/src/ui/: FontManager.h  SimControls.cpp  ViewAvailableEntities.cpp  console.cpp  console.h  node_editor.h  uiapp.cpp
TurtleSimCpp/src/ui/entity_properties/: _draw_source.cpp
TurtleSimCpp/src/utils/: class_factory.cpp  class_factory.h  crypto.h  exe_dir.cpp  exe_dir.h  math_expr.cpp  math_expr.h  time_expr.cpp  time_expr.h
TurtleSimCpp/subfolder/: CMakeLists.txt  test_sub.cpp
TurtleSimCpp/xml_examples/: NodeEditor.json  example_1_paralel.xml  example_2_conveyor.xml  example_4_warehouse.xml
TurtleSimRust/: Cargo.toml
TurtleSimRust/TurtleSimCore/: Cargo.toml
TurtleSimRust/TurtleSimCore/src/: lib.rs  main.rs
TurtleSimRust/TurtleSimCore/src/behaviours/: behActorTaker.rs  behProcess.rs  mod.rs
TurtleSimRust/TurtleSimCore/src/data/: entity.rs
TurtleSimRust/TurtleSimCore/src/entities/: entity.rs  mod.rs  prelude.rs  station.rs  stepper.rs  world.rs
TurtleSimRust/TurtleSimCore/src/test/: mod.rs
TurtleSimRust/TurtleSimUi/: Cargo.toml
TurtleSimRust/TurtleSimUi/src/: app.rs  main.rs
TurtleSimRust/TurtleSimUi/src/sim_entities/: buffer.rs  mod.rs  station.rs
installation/: install.bat
plant_simulation/: example.spp  example.spp.bak
src/: factory_registration.h  logging.cpp  logging.h  prelude.h
src/app/: agv.cpp  agv.h  anynumber.cpp  anynumber.h  app.cpp  app.h  buffer.cpp  buffer.h  context.h  conveyor.cpp  conveyor.h  drain.cpp  drain.h  entity.cpp  entity.h  lane_single.cpp  lane_single.h  loader.cpp  loader.h  mu.cpp  mu.h  prelude.h  source.cpp  source.h  station.cpp  station.h  stepper.cpp  stepper.h  track.cpp  unloader.cpp  unloader.h  warehouse.cpp  warehouse.h  world.cpp  world.h
src/app/statistics/: agv_statistics.h  buffer_statistics.cpp  buffer_statistics.h  conveyor_statistics.cpp  conveyor_statistics.h  drain_statistics.h  loader_statistics.h  source_statistics.h  station_statistics.h  statistics_parent.cpp  statistics_parent.h  unloader_statistics.h
src/blueprints/: bpnode_parent.cpp  bpnode_parent.h
src/runs/: run_ui.cpp  run_ui.h  run_xml.cpp  run_xml.h  wasm_test.h
src/serialization/: prelude.h  safejson.cpp  safejson.h  safexml.cpp  safexml.h
src/statistics/: app_report_collector.cpp  app_report_collector.h  report_maker.h
src/ui/: FontManager.cpp  SimControls.cpp  SimControls.h  SimStates.cpp  SimStates.h  ViewAvailableEntities.cpp  app_controls.cpp  app_controls.h  available_entities_list.cpp  available_entities_list.h  console.cpp  console.h  entities_hierarchy.cpp  entities_hierarchy.h  entity_properties.cpp  entity_properties.h  imguiini.h  node_editor.cpp  node_editor.h  uiapp.cpp  uiapp.h  uicontext.cpp  uicontext.h
src/ui/components/: FileDialog.cpp  FileDialog.h
src/ui/entity_properties/: DrawPropertiesDispatcher.cpp  DrawPropertiesDispatcher.h  _dispatchers.h  _draw_buffer.cpp
src/utils/: class_factory.cpp  class_factory.h  crypto.cpp  crypto.h  exe_dir.cpp  exe_dir.h  math_expr.cpp  math_expr.h  prelude.h  time_expr.cpp  time_expr.h
subfolder/: test_sub.h
xml_examples/: example.xml  example_1.xml  example_2_conveyor.xml  example_3_agv.xml
